--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -172,6 +172,7 @@
             <select id="vehicleSelect" class="vehicle-select">
                 <option value="nandi_1" selected>Nandi 1</option>
                 <option value="nandi_2">Nandi 2</option>
+              <option value="nandi_db03">Nandi 2</option>
             </select>
         </div>
       </h1>
