--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -170,9 +170,9 @@
         <div style="display:flex; align-items:center; gap:6px;">
             Vehicle: 
             <select id="vehicleSelect" class="vehicle-select">
-                <option value="nandi_1" selected>Nandi 1</option>
-                <option value="nandi_2">Nandi 2</option>
-              <option value="nandi_db03">Nandi 2</option>
+                <option value="nandi_1" selected>Nandi_DB01</option>
+                <option value="nandi_2">Nandi_DB02</option>
+              <option value="nandi_db03">Nandi_DB03</option>
             </select>
         </div>
       </h1>
